<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Controllers.Login"
    android:gravity="center_horizontal"
    android:background="#86F088">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="282dp"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/login" />

    <LinearLayout
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_username"
                android:layout_width="220dp"
                android:layout_height="37dp"
                android:layout_marginTop="10dp"
                android:background="#ffffff"
                android:drawableLeft="@drawable/username"
                android:hint="Username"
                android:paddingLeft="1dp" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="210dp"
                android:layout_height="33dp"
                android:layout_marginTop="20dp"
                android:background="#ffffff"
                android:drawableLeft="@drawable/password"
                android:hint="Password"
                android:inputType="textPassword" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="#2196F3"
            android:textColor="#00000A"
            android:text="login"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:textColor="#E91E63"
                android:text="Not_Registered_Yet???"/>

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:paddingLeft="10dp"
                android:textStyle="bold"
                android:textColor="#9C27B0"
                android:text="Register"/>
    </LinearLayout>

</LinearLayout>