<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Controllers.Registration"
    android:background="#86F088">


    <ImageView
        android:layout_width="434dp"
        android:layout_height="239dp"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/registration" />

    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_name"
            android:layout_width="210dp"
            android:layout_height="33dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="2dp"
            android:background="#ffffff"
            android:drawableLeft="@drawable/name"
            android:hint="Full Name"/>

        <EditText
            android:id="@+id/et_email"
            android:layout_width="210dp"
            android:layout_height="33dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="2dp"
            android:background="#ffffff"
            android:drawableLeft="@drawable/email"
            android:hint="Email"/>

        <EditText
            android:id="@+id/et_phonenumber"
            android:layout_width="210dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="2dp"
            android:background="#ffffff"
            android:drawableLeft="@drawable/phone"
            android:hint="Phone Number"/>

        <EditText
            android:id="@+id/et_address"
            android:layout_width="210dp"
            android:layout_height="33dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="2dp"
            android:background="#ffffff"
            android:drawableLeft="@drawable/address"
            android:hint="Address"/>

        <EditText
            android:id="@+id/et_username"
            android:layout_width="210dp"
            android:layout_height="33dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="2dp"
            android:background="#ffffff"
            android:drawableLeft="@drawable/username"
            android:hint="Username"/>


        <EditText
            android:id="@+id/et_password"
            android:layout_width="210dp"
            android:layout_height="33dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="2dp"
            android:background="#ffffff"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/password"
            android:hint="Password"/>

        <EditText
            android:id="@+id/et_cnfpassword"
            android:layout_width="210dp"
            android:layout_height="33dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="2dp"
            android:background="#ffffff"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/password"
            android:hint="Confirm Password"/>

        <EditText
            android:id="@+id/et_usertype"
            android:layout_width="210dp"
            android:layout_height="33dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="2dp"
            android:background="#ffffff"
            android:drawableLeft="@drawable/password"
            android:visibility="invisible"/>





    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_marginLeft="110dp"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#03A9F4"
        android:textColor="#00000A"
        android:text="Register"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_marginLeft="110dp"
            android:layout_height="35dp"
            android:text="Already_Registered???"
            android:textColor="#82DB20" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:textColor="#FFEB3B"
            android:text="Login"/>
    </LinearLayout>


</LinearLayout>
</ScrollView>